@@ -32,6 +32,7 @@
   (mc-require "github/utils/struct")
   (mc-require "github/utils/function")
   (mc-require "github/utils/srfi-26")
+  (mc-require "github/utils/pubkey")
   (mc-require "github/api/types")
   )
 
